_generated-doc/3.6/config/quarkus-reactive-pg-client.adoc

:summaryTableId: quarkus-reactive-pg-client
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-reactive-pg-client_quarkus.datasource.data-sources-datasources]]link:#quarkus-reactive-pg-client_quarkus.datasource.data-sources-datasources[Datasources]

h|Type
h|Default

a| [[quarkus-reactive-pg-client_quarkus.datasource.reactive.postgresql.pipelining-limit]]`link:#quarkus-reactive-pg-client_quarkus.datasource.reactive.postgresql.pipelining-limit[quarkus.datasource.reactive.postgresql.pipelining-limit]`

`link:#quarkus-reactive-pg-client_quarkus.datasource.reactive.postgresql.pipelining-limit[quarkus.datasource."datasource-name".reactive.postgresql.pipelining-limit]`


[.description]
--
The maximum number of inflight database commands that can be pipelined.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_POSTGRESQL_PIPELINING_LIMIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_POSTGRESQL_PIPELINING_LIMIT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-reactive-pg-client_quarkus.datasource.reactive.postgresql.ssl-mode]]`link:#quarkus-reactive-pg-client_quarkus.datasource.reactive.postgresql.ssl-mode[quarkus.datasource.reactive.postgresql.ssl-mode]`

`link:#quarkus-reactive-pg-client_quarkus.datasource.reactive.postgresql.ssl-mode[quarkus.datasource."datasource-name".reactive.postgresql.ssl-mode]`


[.description]
--
SSL operating mode of the client.

See link:https://www.postgresql.org/docs/current/libpq-ssl.html#LIBPQ-SSL-PROTECTION[Protection Provided in Different Modes].

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_POSTGRESQL_SSL_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_POSTGRESQL_SSL_MODE+++`
endif::add-copy-button-to-env-var[]
-- a|
`disable`, `allow`, `prefer`, `require`, `verify-ca`, `verify-full` 
|`disable`


a| [[quarkus-reactive-pg-client_quarkus.datasource.reactive.postgresql.use-layer7-proxy]]`link:#quarkus-reactive-pg-client_quarkus.datasource.reactive.postgresql.use-layer7-proxy[quarkus.datasource.reactive.postgresql.use-layer7-proxy]`

`link:#quarkus-reactive-pg-client_quarkus.datasource.reactive.postgresql.use-layer7-proxy[quarkus.datasource."datasource-name".reactive.postgresql.use-layer7-proxy]`


[.description]
--
Level 7 proxies can load balance queries on several connections to the actual database. When it happens, the client can be confused by the lack of session affinity and unwanted errors can happen like ERROR: unnamed prepared statement does not exist (26000). See link:https://vertx.io/docs/vertx-pg-client/java/#_using_a_level_7_proxy[Using a level 7 proxy]

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_POSTGRESQL_USE_LAYER7_PROXY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_POSTGRESQL_USE_LAYER7_PROXY+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`

|===